--- a/ch1_variable_basic/data_list_index_slicing.ipynb
+++ b/ch1_variable_basic/data_list_index_slicing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,30 +39,59 @@
     "# 파이썬에서는 기본적으로 모든 타입이 : 객체다.\n",
     "alist = [1,2,3,4.5,\"김경태\"]\n",
     "print(f\"리스트 출력 해보기. : {alist}\")\n",
+    "# 리스트 출력 해보기. : [1, 2, 3, 4.5, '김경태']\n",
+    "\n",
     "print(f\"alist 의 타입. : {type(alist)}\")\n",
+    "# alist 의 타입. : <class 'list'>\n",
+    "\n",
     "\n",
     "a = 3\n",
     "print(f\" a 의 타입 : {type(a)}\")\n",
+    "#  a 의 타입 : <class 'int'>\n",
+    "\n",
     "\n",
     "# 인덱싱, 슬라이싱 [a : b : c], a : 시작값, b: 마지막값, c : 증가값\n",
     "# b 마지막 값은 포함이 안됨\n",
     "# 리버스 인덱싱, 요소의 맨 마지막이 -1 부터 시작\n",
     "print(f\"인덱싱 : alist의 0번째 요소 : {alist[0]}\")\n",
+    "# 인덱싱 : alist의 0번째 요소 : 1\n",
+    "\n",
     "\n",
     "\n",
     "# 슬라이싱 !끝번호가 들어가지 않는다. 항상 -1\n",
     "print(f\"슬라이싱 : [0:3](3은포함이 안됨): {alist[0:3]}\")\n",
+    "# 슬라이싱 : [0:3](3은포함이 안됨): [1, 2, 3]\n",
+    "\n",
     "print(f\"슬라이싱 : [0:3](3은포함이 안됨):  0, 1, 2 (인덱싱)\")\n",
+    "# 슬라이싱 : [0:3](3은포함이 안됨):  0, 1, 2 (인덱싱)\n",
+    "\n",
     "\n",
     "print(f\"슬라이싱 : 전체 출력 [:] :  {alist[:]}\")\n",
+    "# 슬라이싱 : 전체 출력 [:] :  [1, 2, 3, 4.5, '김경태']\n",
+    "\n",
     "print(f\"슬라이싱 : 전체 출력 [::] :  {alist[::]}\")\n",
+    "# 슬라이싱 : 전체 출력 [::] :  [1, 2, 3, 4.5, '김경태']\n",
+    "\n",
     "print(f\"슬라이싱 : 건너뛰기1 [::1] :  {alist[::1]}\")\n",
+    "# 슬라이싱 : 건너뛰기1 [::1] :  [1, 2, 3, 4.5, '김경태']\n",
+    "\n",
     "print(f\"슬라이싱 : 건너뛰기2 [::2] :  {alist[::2]}\")\n",
+    "# 슬라이싱 : 건너뛰기2 [::2] :  [1, 3, '김경태']\n",
+    "\n",
     "print(f\"슬라이싱 : 역으로 슬라이싱-1 [::-1] :  {alist[::-1]}\")\n",
+    "# 슬라이싱 : 역으로 슬라이싱-1 [::-1] :  ['김경태', 4.5, 3, 2, 1]\n",
+    "\n",
     "print(f\"슬라이싱 : 역으로 슬라이싱-2 [::-2] :  {alist[::-2]}\")\n",
+    "# 슬라이싱 : 역으로 슬라이싱-2 [::-2] :  ['김경태', 3, 1]\n",
+    "\n",
     "print(f\"슬라이싱 : 2부터 끝까지 [2:] :  {alist[2:]}\")\n",
+    "# 슬라이싱 : 2부터 끝까지 [2:] :  [3, 4.5, '김경태']\n",
+    "\n",
     "print(f\"슬라이싱 : 2부터 -1(마지막요소포함안됨) [2:-1] :  {alist[2:-1]}\")\n",
+    "# 슬라이싱 : 2부터 -1(마지막요소포함안됨) [2:-1] :  [3, 4.5]\n",
+    "\n",
     "print(f\"슬라이싱 : 2부터 4(마지막요소포함안됨) [2:4] :  {alist[2:4]}\")\n",
+    "# 슬라이싱 : 2부터 4(마지막요소포함안됨) [2:4] :  [3, 4.5]\n",
     "\n"
    ]
   },
@@ -87,10 +116,15 @@
     "sumList = alist + alist\n",
     "mulList = alist * 3\n",
     "print(f\"sumList 출력 : {sumList}\")\n",
+    "# sumList 출력 : [1, 2, 3, 4.5, '김경태', 1, 2, 3, 4.5, '김경태']\n",
+    "\n",
     "print(f\"mulList 출력 : {mulList}\")\n",
+    "# mulList 출력 : [1, 2, 3, 4.5, '김경태', 1, 2, 3, 4.5, '김경태', 1, 2, 3, 4.5, '김경태']\n",
+    "\n",
     "\n",
     "# in 연산자 확인\n",
-    "print(f\"alist의 요소의 값 중에 3이 있나요 ? : {3 in alist}\")"
+    "print(f\"alist의 요소의 값 중에 3이 있나요 ? : {3 in alist}\")\n",
+    "# alist의 요소의 값 중에 3이 있나요 ? : True\n"
    ]
   },
   {
@@ -116,28 +150,40 @@
     "alist = [1,2,3,4.5,\"김경태\"]\n",
     "alist.append(\"김경태2\")\n",
     "print(f\"alist 출력 : {alist}\")\n",
+    "# alist 출력 : [1, 2, 3, 4.5, '김경태', '김경태2']\n",
+    "\n",
     "\n",
     "# extent 새로운 리스트를 기존 리스트에 추가\n",
     "blist = [1,2,3,4.5,\"김경태\"]\n",
     "clist = [\"a\",\"b\",\"c\"]\n",
     "blist.extend(clist)\n",
     "print(f\"blist 출력 : {blist}\")\n",
+    "# blist 출력 : [1, 2, 3, 4.5, '김경태', 'a', 'b', 'c']\n",
+    "\n",
     "\n",
     "# insert , 특정 인덱스에 새로운 값을 추가\n",
     "alist.insert(0,\"김경태0\")\n",
     "print(f\"alist 출력 (김경태0 추가): {alist}\")\n",
+    "# alist 출력 (김경태0 추가): ['김경태0', 1, 2, 3, 4.5, '김경태', '김경태2']\n",
+    "\n",
     "\n",
     "# remove  리스트 내의 특정 값을 삭제\n",
     "alist.remove(\"김경태2\")\n",
     "print(f\"alist 출력 (김경태2 삭제): {alist}\")\n",
+    "# alist 출력 (김경태2 삭제): ['김경태0', 1, 2, 3, 4.5, '김경태']\n",
+    "\n",
     "\n",
     "# 재할당 , 인덱스에 새로운 값을 덮어쓰기\n",
     "alist[0] = \"김경태0 대신 덮어쓰기\"\n",
     "print(f\"alist 출력 (김경태0 대신 덮어쓰기): {alist}\")\n",
+    "# alist 출력 (김경태0 대신 덮어쓰기): ['김경태0 대신 덮어쓰기', 1, 2, 3, 4.5, '김경태']\n",
+    "\n",
     "\n",
     "# del 함수를 이용해서 해당 인덱스 삭제\n",
     "del alist[0]\n",
-    "print(f\"alist 출력 (0번인덱스 삭제): {alist}\")\n"
+    "print(f\"alist 출력 (0번인덱스 삭제): {alist}\")\n",
+    "# alist 출력 (0번인덱스 삭제): [1, 2, 3, 4.5, '김경태']\n",
+    "\n"
    ]
   },
   {
@@ -158,7 +204,9 @@
     "# 언패킹 : 한 변수의 데이터를 각각의 변수로 할당\n",
     "a = [1,2,3]  # 1,2,3을 변수 a에 패킹\n",
     "x,y,z = a # a에 있는 값 1,2,3을 변수 x,y,z에 언패킹\n",
-    "print(f\"a 리스트 : {a},| x : {x}, | y : {y}, | z : {z}\")"
+    "print(f\"a 리스트 : {a},| x : {x}, | y : {y}, | z : {z}\")\n",
+    "# a 리스트 : [1, 2, 3],| x : 1, | y : 2, | z : 3\n",
+    "\n"
    ]
   },
   {
@@ -194,13 +242,24 @@
     "i = 257\n",
     "j = 257\n",
     "print(f\"alist와 blist 저장된 위치 주소값 비교 : {alist is blist}\")\n",
+    "# alist와 blist 저장된 위치 주소값 비교 : False\n",
+    "\n",
     "print(f\"a와 b의  저장된 위치 주소값 비교 : {a is b}\")\n",
+    "# a와 b의  저장된 위치 주소값 비교 : False\n",
+    "\n",
     "# -5 ~ 256까지의 정수값은 특정 메모리 주소에 저장하기 때문에 위치값이 같다.\n",
     "print(f\"c와 d의  저장된 위치 주소값 비교 : {c is d}\")\n",
+    "# c와 d의  저장된 위치 주소값 비교 : True\n",
+    "\n",
     "print(f\"e와 f의  저장된 위치 주소값 비교 : {e is f}\")\n",
+    "# e와 f의  저장된 위치 주소값 비교 : True\n",
+    "\n",
     "print(f\"g와 h의  저장된 위치 주소값 비교 : {g is h}\")\n",
+    "# g와 h의  저장된 위치 주소값 비교 : True\n",
+    "\n",
     "# 범위 벗어나니 False\n",
-    "print(f\"i와 j의  저장된 위치 주소값 비교 : {i is j}\")"
+    "print(f\"i와 j의  저장된 위치 주소값 비교 : {i is j}\")\n",
+    "# i와 j의  저장된 위치 주소값 비교 : False"
    ]
   }
  ],
