--- a/ch1_variable_basic/data_type_input_output.ipynb
+++ b/ch1_variable_basic/data_type_input_output.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,8 @@
      "text": [
       "a의 타입의 결과 (함수 type 사용):  <class 'str'>\n",
       "b의 타입의 결과 (함수 type 사용):  <class 'int'>\n",
-      "c의 타입의 결과 (함수 type 사용):  <class 'str'> | 입력된 값 :2\n"
+      "c의 타입의 결과 (함수 type 사용):  <class 'str'> | 입력된 값 :1\n",
+      "c의 타입의 결과 (함수 type 사용):  <class 'int'> | 입력된 값 :2\n"
      ]
     }
    ],
@@ -73,15 +74,25 @@
     "# 정수 -> 문자열 변환\n",
     "a = str(num1)\n",
     "print(f\"a의 타입의 결과 (함수 type 사용):  {type(a)}\")\n",
+    "# a의 타입의 결과 (함수 type 사용):  <class 'str'>\n",
     "\n",
     "# 문자열 -> 정수 변환\n",
     "b = int(str2)\n",
     "print(f\"b의 타입의 결과 (함수 type 사용):  {type(b)}\")\n",
+    "# b의 타입의 결과 (함수 type 사용):  <class 'int'>\n",
+    "\n",
     "\n",
     "# input(), 표준 입력\n",
     "# 필요시, 해당 값을 정수 등 변환해서 사용하면 됨\n",
     "c = input(\"본인이 좋아하는 숫자(1~5) 선택해주세요.\")\n",
-    "print(f\"c의 타입의 결과 (함수 type 사용):  {type(c)} | 입력된 값 :{c}\")"
+    "print(f\"c의 타입의 결과 (함수 type 사용):  {type(c)} | 입력된 값 :{c}\")\n",
+    "# c의 타입의 결과 (함수 type 사용):  <class 'str'> | 입력된 값 :1\n",
+    "\n",
+    "\n",
+    "# input(), int로 변환\n",
+    "c = int(input(\"본인이 좋아하는 숫자(1~5) 선택해주세요.\"))\n",
+    "print(f\"c의 타입의 결과 (함수 type 사용):  {type(c)} | 입력된 값 :{c}\")\n",
+    "# c의 타입의 결과 (함수 type 사용):  <class 'int'> | 입력된 값 :2\n"
    ]
   }
  ],
